# telogator2

./: LICENSE  README.md  conda_env_telogator.yaml  conda_env_telogator2.yaml  get_kmer_hits.py  get_reads_with_kmer_hits.py  get_subtel_reads.py  make_telogator_ref.py  pyproject.toml  requirements.txt  telogator.py  telogator2.py  telogator_unanchored.py
.github/workflows/: test.yml
resources/: kmers.tsv  repetitive-k15_mouse.txt  subtel-regions_mouse.bed  t2t-telogator-ref_repeatmasker.bed  telogator-ref-k15.txt  telogator-ref-mouse-k15.txt  telogator-ref.fa.fai
resources/non-human/: kmers_celegans.tsv  kmers_maize.tsv  telogator-ref-maize.fa.fai
source/: tg_align.py  tg_kmer.py  tg_muscle.py  tg_plot.py  tg_reader.py  tg_ref.py  tg_tel.py  tg_tvr.py  tg_util.py
source/resources/: telogator-ref-k15.txt  telogator-ref.fa.fai
source/resources/non-human/: kmers_celegans.tsv  kmers_maize.tsv  telogator-ref-maize-k15.txt  telogator-ref-maize.fa.fai  telogator-ref-mouse.fa.fai
test_data/: hg002_chr1q.p
